<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nepali Mobile Tools</string>
    <string name="choose_provider">Choose your provider</string>
    <string name="recharge">Recharge your pre-paid mobile</string>
    <string name="enter_pin">Enter recharge PIN</string>
    <string name="recharge_button">Recharge</string>
    <string name="check_balance">Check my balance</string>
    <string name="action_settings">Settings</string>
    <string name="namaste">Namaste (NTC)</string>
    <string name="ncell">Ncell</string>

</resources>
