<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/recharge_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/choose_provider"
        android:textColor="@color/lBlue600"
        android:textSize="20sp"
        android:textStyle="italic" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recharge_title"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/radionamaste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:padding="4dp"
            android:text="@string/namaste" />

        <RadioButton
            android:id="@+id/radioncell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recharge_title"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/radionamaste"
            android:onClick="onRadioButtonClicked"
            android:padding="4dp"
            android:text="@string/ncell" />
    </RadioGroup>

    <TextView
        android:id="@+id/rechargetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiogroup"
        android:layout_marginTop="24dp"
        android:padding="4dp"
        android:text="@string/recharge"
        android:textColor="@color/lBlue600"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rechargetext"
        android:hint="@string/enter_pin"
        android:inputType="number"
        android:padding="4dp"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/button_recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:padding="16dp"
        android:text="@string/recharge_button" />

    <Button
        android:id="@+id/button_check_balance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_recharge"
        android:layout_marginTop="16dp"
        android:onClick="checkBalance"
        android:text="@string/check_balance" />

</RelativeLayout>
